Generate segmented train and test images

--- a/Segmentation.ipynb
+++ b/Segmentation.ipynb
@@ -6,7 +6,7 @@
       "name": "Segmentation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMg9uQvM0B/+j309fDOMjfH",
+      "authorship_tag": "ABX9TyM3622XbAqJUz5hexbGcNEy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,33 +30,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "id": "IHbzVgg-f7oe",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "bb27339c-b5ae-4fcf-900f-145d8c657c96"
+        "id": "IHbzVgg-f7oe"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: kaggle in /usr/local/lib/python3.7/dist-packages (1.5.12)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.7/dist-packages (from kaggle) (2021.10.8)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from kaggle) (4.62.3)\n",
-            "Requirement already satisfied: urllib3 in /usr/local/lib/python3.7/dist-packages (from kaggle) (1.24.3)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from kaggle) (2.23.0)\n",
-            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.7/dist-packages (from kaggle) (2.8.2)\n",
-            "Requirement already satisfied: python-slugify in /usr/local/lib/python3.7/dist-packages (from kaggle) (5.0.2)\n",
-            "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.7/dist-packages (from kaggle) (1.15.0)\n",
-            "Requirement already satisfied: text-unidecode>=1.3 in /usr/local/lib/python3.7/dist-packages (from python-slugify->kaggle) (1.3)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->kaggle) (2.10)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->kaggle) (3.0.4)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "! pip install kaggle"
       ]
@@ -104,7 +82,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5n_xKi7pgfaW",
-        "outputId": "ac3d3d0d-17af-48fa-d839-bc3de60f5ea7"
+        "outputId": "ed3fda0a-406c-4561-9dcd-1d3882d5cc22"
       },
       "execution_count": 5,
       "outputs": [
@@ -113,8 +91,8 @@
           "name": "stdout",
           "text": [
             "Downloading cell-images-for-detecting-malaria.zip to /content\n",
-            "100% 673M/675M [00:19<00:00, 61.1MB/s]\n",
-            "100% 675M/675M [00:19<00:00, 36.3MB/s]\n"
+            " 99% 671M/675M [00:06<00:00, 135MB/s]\n",
+            "100% 675M/675M [00:06<00:00, 110MB/s]\n"
           ]
         }
       ]
@@ -147,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GhbXqdkygygq",
-        "outputId": "8301afb5-b040-4936-d5a0-1d7b0141b83c"
+        "outputId": "1f58a13b-e100-49fd-ae97-9efabbba5ef2"
       },
       "execution_count": 7,
       "outputs": [
@@ -193,7 +171,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hsZ5a-uMhOq1",
-        "outputId": "ce0b4fc7-0632-441a-bcce-018e1ac09297"
+        "outputId": "6c1c4ccf-f1d7-49df-e92b-2ca058efbcb8"
       },
       "execution_count": 9,
       "outputs": [
@@ -227,7 +205,7 @@
           "height": 256
         },
         "id": "SBcGUpgOhYKo",
-        "outputId": "3fff3860-e473-4f27-cad5-f55c66f65300"
+        "outputId": "4d3f9d83-41b7-4c15-a18b-a6a71f87c377"
       },
       "execution_count": 10,
       "outputs": [
@@ -288,7 +266,7 @@
           "height": 267
         },
         "id": "xpINiGsDiwzp",
-        "outputId": "d8956eb8-30bc-4cfc-ca21-5d7656ef65dd"
+        "outputId": "cf2835b8-4e3b-428d-dfe2-ba04dfb2e3eb"
       },
       "execution_count": 12,
       "outputs": [
@@ -341,7 +319,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ET2pUfQajXsm",
-        "outputId": "0f0fd2c7-1dc0-4c40-cc76-f6ea40d09937"
+        "outputId": "f98cc824-118d-4191-aab2-dd5d7e473718"
       },
       "execution_count": 15,
       "outputs": [
@@ -391,7 +369,7 @@
           "height": 268
         },
         "id": "ywOsqn-qjxcf",
-        "outputId": "2a3331cf-12fb-4703-a95b-07dd0de50e04"
+        "outputId": "605d98e2-7109-44b4-be25-81d825e32e8b"
       },
       "execution_count": 16,
       "outputs": [
@@ -425,7 +403,7 @@
           "height": 585
         },
         "id": "KBRY9Rv_0PRs",
-        "outputId": "77280aaa-584d-4ae4-8e77-3ccc7422d2af"
+        "outputId": "ac2f3410-8cc7-47c6-af81-de87847a4e74"
       },
       "execution_count": 17,
       "outputs": [
@@ -469,10 +447,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 585
         },
-        "outputId": "9a69d7a6-cd18-4431-e410-3271854f506e",
+        "outputId": "9fc520d8-1356-48d6-8712-e0d397effccd",
         "id": "NNm3BbNPtwSA"
       },
-      "execution_count": 42,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
@@ -505,10 +483,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 587
         },
-        "outputId": "d9575695-7515-4ccc-b8e3-55387c36aabb",
+        "outputId": "f38ef293-0b98-4786-88de-677278b4ab46",
         "id": "yR2dMEaRwZVJ"
       },
-      "execution_count": 44,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -550,10 +528,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 587
         },
-        "outputId": "0f624d82-8270-4ac9-a685-6afacb8d1261",
+        "outputId": "0a67fcc3-40c5-4671-a318-90f5a363011d",
         "id": "REd4TXXswOhk"
       },
-      "execution_count": 45,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
@@ -568,6 +546,180 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os \n",
+        "infected_dir = \"/content/cell_images/Parasitized_segmented\"\n",
+        "os.mkdir(infected_dir) \n",
+        "uninfected_dir = \"/content/cell_images/Uninfected_segmented\"\n",
+        "os.mkdir(uninfected_dir) "
+      ],
+      "metadata": {
+        "id": "kLysGfJKEb0I"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "img = cv2.imread('D:/image-1.png')\n",
+        "isWritten = cv2.imwrite('D:/image-2.png', img)"
+      ],
+      "metadata": {
+        "id": "kT0NWyw3Ebqm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for image in parasitized_data:\n",
+        "  try:\n",
+        "      img = cv2.imread('/content/cell_images/Parasitized' + \"/\" + image,0)\n",
+        "      kernel = np.array([[-1,-1,-1], [-1,9,-1], [-1,-1,-1]])\n",
+        "      img = cv2.filter2D(img, ddepth=-1, kernel=kernel)\n",
+        "      ret, thresh = cv2.threshold(img,0,255,cv2.THRESH_TOZERO_INV+cv2.THRESH_OTSU)\n",
+        "      # noise removal\n",
+        "      kernel = np.ones((3,3),np.uint8)\n",
+        "      #opening = cv2.morphologyEx(thresh,cv2.MORPH_OPEN,kernel, iterations = 2)\n",
+        "      closing = cv2.morphologyEx(thresh,cv2.MORPH_CLOSE,kernel, iterations = 2)\n",
+        "      # sure background area\n",
+        "      sure_bg = cv2.dilate(closing,kernel,iterations=3)\n",
+        "      isWritten = cv2.imwrite('/content/cell_images/Parasitized_segmented' + \"/\" + image, sure_bg)        \n",
+        "      if isWritten:\n",
+        "\t        print('Image is successfully saved as file.')\n",
+        "  except:\n",
+        "    None"
+      ],
+      "metadata": {
+        "id": "-ya_LF4LEbg_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for image in uninfected_data:\n",
+        "  try:\n",
+        "      img = cv2.imread('/content/cell_images/Uninfected' + \"/\" + image,0)\n",
+        "      kernel = np.array([[-1,-1,-1], [-1,9,-1], [-1,-1,-1]])\n",
+        "      img = cv2.filter2D(img, ddepth=-1, kernel=kernel)\n",
+        "      ret, thresh = cv2.threshold(img,0,255,cv2.THRESH_TOZERO_INV+cv2.THRESH_OTSU)\n",
+        "      # noise removal\n",
+        "      kernel = np.ones((3,3),np.uint8)\n",
+        "      #opening = cv2.morphologyEx(thresh,cv2.MORPH_OPEN,kernel, iterations = 2)\n",
+        "      closing = cv2.morphologyEx(thresh,cv2.MORPH_CLOSE,kernel, iterations = 2)\n",
+        "      # sure background area\n",
+        "      sure_bg = cv2.dilate(closing,kernel,iterations=3)\n",
+        "      isWritten = cv2.imwrite('/content/cell_images/Uninfected_segmented' + \"/\" + image, sure_bg)        \n",
+        "      if isWritten:\n",
+        "\t        print('Image is successfully saved as file.')\n",
+        "  except:\n",
+        "    None"
+      ],
+      "metadata": {
+        "id": "0WMUlwFcLYWX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!zip -r /content/cell_images.zip /content/cell_images/"
+      ],
+      "metadata": {
+        "id": "-UQA2G2wMTXR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Cross checks"
+      ],
+      "metadata": {
+        "id": "oGx_DEyOLUJA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "list = os.listdir('/content/cell_images/Parasitized') # dir is your directory path\n",
+        "number_files = len(list)\n",
+        "print(number_files)\n",
+        "list = os.listdir('/content/cell_images/Parasitized_segmented') # dir is your directory path\n",
+        "number_files = len(list)\n",
+        "print(number_files)\n",
+        "print(len(parasitized_data))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OcawW6DRK12f",
+        "outputId": "d8e135cb-9527-458d-8d55-c6a8b01eef1f"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "13780\n",
+            "13779\n",
+            "13780\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list = os.listdir('/content/cell_images/Uninfected') # dir is your directory path\n",
+        "number_files = len(list)\n",
+        "print(number_files)\n",
+        "list = os.listdir('/content/cell_images/Uninfected_segmented') # dir is your directory path\n",
+        "number_files = len(list)\n",
+        "print(number_files)\n",
+        "print(len(uninfected_data))"
+      ],
+      "metadata": {
+        "outputId": "a78ace8c-1813-45d6-be9a-2f68e1c19986",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JZoGiiU_Lw34"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "13780\n",
+            "13779\n",
+            "13780\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Reference code"
+      ],
+      "metadata": {
+        "id": "O3mVZZ83EdKe"
+      }
     },
     {
       "cell_type": "code",
@@ -684,17 +836,6 @@
       "metadata": {
         "id": "HFrR_SM1rLfS"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "CkIw9U87rL8W"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
