check image size consistency

--- a/Anomaly_detection.ipynb
+++ b/Anomaly_detection.ipynb
@@ -6,7 +6,7 @@
       "name": "Anomaly_detection.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOoZP09JVfQXhQUeV2viMP0",
+      "authorship_tag": "ABX9TyO5E1UXN2Mf9FdUhs0fQBXC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "JIcaNg2KRYMo"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "QSVmRsD-PSyU"
       },
@@ -103,7 +103,7 @@
       "metadata": {
         "id": "VvP_wIB0-ZqB"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
         "id": "pQceMcvY-ZgV",
         "outputId": "986dfc17-9d15-4286-8af1-e6fa5e27d32c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -149,7 +149,7 @@
       "metadata": {
         "id": "JhSqggK4JadM"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -168,7 +168,7 @@
           "height": 35
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -189,7 +189,7 @@
       "cell_type": "code",
       "source": [
         "#Size of our input images\n",
-        "SIZE = 128\n",
+        "Size = 128\n",
         "\n",
         "#############################################################################\n",
         "#Define generators for training, validation and also anomaly data.\n",
@@ -202,21 +202,21 @@
         "\n",
         "train_generator = datagen_train.flow_from_directory(\n",
         "    train_dir,\n",
-        "    target_size=(SIZE, SIZE),\n",
+        "    target_size=(Size, Size),\n",
         "    batch_size=batch_size,\n",
         "    class_mode='input',\n",
         "    subset='training')\n",
         "\n",
         "validation_generator = datagen_train.flow_from_directory(\n",
         "    train_dir,\n",
-        "    target_size=(SIZE, SIZE),\n",
+        "    target_size=(Size, Size),\n",
         "    batch_size=batch_size,\n",
         "    class_mode='input',\n",
         "    subset='validation')\n",
         "\n",
         "anomaly_generator = datagen.flow_from_directory(\n",
         "    test_dir,\n",
-        "    target_size=(SIZE, SIZE),\n",
+        "    target_size=(Size, Size),\n",
         "    batch_size=batch_size,\n",
         "    class_mode='input'\n",
         "    )"
@@ -228,7 +228,7 @@
         "id": "nQhkWDwbPrwM",
         "outputId": "ee23eb34-4271-41c7-b91a-792b65ae9559"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,13 +244,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#Define the autoencoder. \n",
-        "#Try to make the bottleneck layer size as small as possible to make it easy for\n",
-        "#density calculations and also picking appropriate thresholds. \n",
-        "\n",
+        "#Define the autoencoder\n",
         "#Encoder\n",
         "model = Sequential()\n",
-        "model.add(Conv2D(64, (3, 3), activation='relu', padding='same', input_shape=(SIZE, SIZE, 3)))\n",
+        "model.add(Conv2D(64, (3, 3), activation='relu', padding='same', input_shape=(Size, Size, 3)))\n",
         "model.add(MaxPooling2D((2, 2), padding='same'))\n",
         "model.add(Conv2D(32, (3, 3), activation='relu', padding='same'))\n",
         "model.add(MaxPooling2D((2, 2), padding='same'))\n",
@@ -264,13 +261,12 @@
         "model.add(UpSampling2D((2, 2)))\n",
         "model.add(Conv2D(64, (3, 3), activation='relu', padding='same'))\n",
         "model.add(UpSampling2D((2, 2)))\n",
-        "\n",
         "model.add(Conv2D(3, (3, 3), activation='sigmoid', padding='same'))"
       ],
       "metadata": {
         "id": "aHPbPDYSP4pX"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -286,7 +282,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,7 +352,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -589,7 +585,7 @@
           "height": 295
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -622,13 +618,13 @@
       "metadata": {
         "id": "5_Hqf2F3QXpM"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#Sanity check, view few images and corresponding reconstructions\n",
+        "#View few images and corresponding reconstructions\n",
         "image_number = random.randint(0, predicted.shape[0])\n",
         "plt.figure(figsize=(12, 6))\n",
         "plt.subplot(121)\n",
@@ -645,7 +641,7 @@
           "height": 355
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -679,7 +675,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -705,11 +701,10 @@
       "cell_type": "code",
       "source": [
         "#Let us extract (or build) the encoder network, with trained weights.\n",
-        "#This is used to get the compressed output (latent space) of the input image. \n",
-        "#The compressed output is then used to calculate the KDE\n",
+        "#Calculate KDE using compressed output\n",
         "\n",
         "encoder_model = Sequential()\n",
-        "encoder_model.add(Conv2D(64, (3, 3), activation='relu', padding='same', input_shape=(SIZE, SIZE, 3), weights=model.layers[0].get_weights()) )\n",
+        "encoder_model.add(Conv2D(64, (3, 3), activation='relu', padding='same', input_shape=(Size, Size, 3), weights=model.layers[0].get_weights()) )\n",
         "encoder_model.add(MaxPooling2D((2, 2), padding='same'))\n",
         "encoder_model.add(Conv2D(32, (3, 3), activation='relu', padding='same', weights=model.layers[2].get_weights()))\n",
         "encoder_model.add(MaxPooling2D((2, 2), padding='same'))\n",
@@ -724,7 +719,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -761,7 +756,6 @@
     {
       "cell_type": "code",
       "source": [
-        "########################################################\n",
         "# Calculate KDE using sklearn\n",
         "from sklearn.neighbors import KernelDensity\n",
         "\n",
@@ -775,7 +769,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -799,7 +793,7 @@
       "metadata": {
         "id": "WdrkUwIIQwpT"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -811,7 +805,7 @@
       "metadata": {
         "id": "p3qldSe4Qwnp"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -847,7 +841,7 @@
       "metadata": {
         "id": "VBpXw4PZQwli"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -868,7 +862,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1032,7 +1026,7 @@
       "metadata": {
         "id": "Ra9qWKEcREu2"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1046,7 +1040,7 @@
       "metadata": {
         "id": "R23gOfMlREqu"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1064,7 +1058,7 @@
           "height": 302
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1103,7 +1097,7 @@
           "height": 302
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
