--- a/Autoencoder_Reconstruction_Classification.ipynb
+++ b/Autoencoder_Reconstruction_Classification.ipynb
@@ -135,7 +135,7 @@
           "height": 35
         },
         "id": "nfGBjvLy0Qn-",
-        "outputId": "1b42bdde-5a67-4fa2-8160-ebed2eb8ecf5"
+        "outputId": "506e4b2b-47ad-4d7b-fa01-85ef4056f38a"
       }
     },
     {
@@ -195,7 +195,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xyldvezq0QoD",
-        "outputId": "8ee06493-4927-45e3-d49f-fd41f378d080"
+        "outputId": "ab8575a7-5afa-438c-ef82-0956895d009e"
       }
     },
     {
@@ -311,7 +311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 19,
       "source": [
         "image_names = Dataset.list_files(os.path.join(BASE_PATH, '*.png'), seed = RANDOM_STATE)\n",
         "image_count = image_names.cardinality().numpy()\n",
@@ -332,7 +332,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ff7IySZA0QoQ",
-        "outputId": "fa93a0e1-6300-4e2f-ff11-8ff5e32ab98d"
+        "outputId": "36b69986-a362-4011-91c7-9bb526eb3d34"
       }
     },
     {
@@ -1293,7 +1293,7 @@
       "metadata": {
         "id": "wpH2_w0q7PpJ"
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1307,13 +1307,13 @@
         "print(uninfected_data[:10])"
       ],
       "metadata": {
-        "id": "zuTKkhTGt-ER",
-        "outputId": "507e958b-d36b-4c16-8b38-0c7126ea355e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zuTKkhTGt-ER",
+        "outputId": "eeb34976-fe18-445c-bc63-8f83f67e6375"
       },
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1335,7 +1335,7 @@
         "for img in parasitized_data:\n",
         "    try:\n",
         "        img_read = plt.imread('/content/cell_images/Parasitized' + \"/\" + img)\n",
-        "        img_array = img_to_array(img_read)\n",
+        "        img_array = np.array(img_read)\n",
         "        data.append(img_array)\n",
         "        labels.append(1)\n",
         "    except:\n",
@@ -1344,7 +1344,7 @@
         "for img in uninfected_data:\n",
         "    try:\n",
         "        img_read = plt.imread('/content/cell_images/Uninfected' + \"/\" + img)\n",
-        "        img_array = img_to_array(img_read)\n",
+        "        img_array = np.array(img_read)\n",
         "        data.append(img_array)\n",
         "        labels.append(0)\n",
         "    except:\n",
@@ -1353,8 +1353,44 @@
       "metadata": {
         "id": "V8O3UhTOt97q"
       },
-      "execution_count": 6,
+      "execution_count": 13,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = np.array(data)\n",
+        "labels = np.array(labels)\n",
+        "data.shape, labels.shape"
+      ],
+      "metadata": {
+        "id": "IJv42jADx3ga",
+        "outputId": "d1215c4d-099c-43be-adfe-3c3a06e3bd79",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+            "  \"\"\"Entry point for launching an IPython kernel.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((27558,), (27558,))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1373,24 +1409,25 @@
         "print(f'\\nValidation Labels: {Y_val.shape}')"
       ],
       "metadata": {
-        "id": "niaFIOJ-t9zS",
-        "outputId": "17a455d2-82d1-4e16-a77c-5b59d0b7e327",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 234
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "niaFIOJ-t9zS",
+        "outputId": "e343dcfd-5bcd-47c3-c16f-df56bfef35cc"
       },
-      "execution_count": 18,
+      "execution_count": 25,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-18-bf48dccb3ee1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     )\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Training Images: {X_train.shape}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'\\nTraining Labels: {Y_train.shape}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'\\nValidation Data: {X_val.shape}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'shape'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Images: (26180,)\n",
+            "\n",
+            "Training Labels: (26180,)\n",
+            "\n",
+            "Validation Data: (1378,)\n",
+            "\n",
+            "Validation Labels: (1378,)\n"
           ]
         }
       ]
