--- a/Autoencoder_Reconstruction_Classification.ipynb
+++ b/Autoencoder_Reconstruction_Classification.ipynb
@@ -1335,7 +1335,8 @@
         "for img in parasitized_data:\n",
         "    try:\n",
         "        img_read = plt.imread('/content/cell_images/Parasitized' + \"/\" + img)\n",
-        "        img_array = np.array(img_read)\n",
+        "        img_resize = cv2.resize(img_read, (128,128))\n",
+        "        img_array = np.array(img_resize)\n",
         "        data.append(img_array)\n",
         "        labels.append(1)\n",
         "    except:\n",
@@ -1344,7 +1345,8 @@
         "for img in uninfected_data:\n",
         "    try:\n",
         "        img_read = plt.imread('/content/cell_images/Uninfected' + \"/\" + img)\n",
-        "        img_array = np.array(img_read)\n",
+        "        img_resize = cv2.resize(img_read, (128,128))\n",
+        "        img_array = np.array(img_resize)\n",
         "        data.append(img_array)\n",
         "        labels.append(0)\n",
         "    except:\n",
@@ -1353,7 +1355,7 @@
       "metadata": {
         "id": "V8O3UhTOt97q"
       },
-      "execution_count": 13,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -1361,36 +1363,13 @@
       "source": [
         "data = np.array(data)\n",
         "labels = np.array(labels)\n",
-        "data.shape, labels.shape"
+        "data.shape[0], labels.shape"
       ],
       "metadata": {
-        "id": "IJv42jADx3ga",
-        "outputId": "d1215c4d-099c-43be-adfe-3c3a06e3bd79",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "IJv42jADx3ga"
       },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-            "  \"\"\"Entry point for launching an IPython kernel.\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "((27558,), (27558,))"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 14
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1413,17 +1392,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "niaFIOJ-t9zS",
-        "outputId": "e343dcfd-5bcd-47c3-c16f-df56bfef35cc"
+        "outputId": "38185486-ec4e-4159-a0bc-e0d216591ceb"
       },
-      "execution_count": 25,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training Images: (26180,)\n",
+            "Training Images: (26182,)\n",
             "\n",
-            "Training Labels: (26180,)\n",
+            "Training Labels: (26182,)\n",
             "\n",
             "Validation Data: (1378,)\n",
             "\n",
